--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="wrap">
-        <img src="portrait.png" width="800vw" height="auto" onClick="location.href='index1.html'"/>
+        <center><img src="portrait.png" width="50%" height="auto" onClick="location.href='1.html'"/></center>
+        <center><img src="rope.png" width="30%" height="auto"/></center>
     </div>
 </body>
 </html>
