--- a/1.html
+++ b/1.html
@@ -9,16 +9,18 @@
 <body>
     <div class="cheese">
         <center>
-        <h3>치즈 인 더 트랩</h3>
-        <br>
-        <h3>백인호</h3>
-        <br>
-        <br>
+        <p>Cheese in the Trap</p>
+        <p>Inho Baek</p>
+        <br><br>
         <ul>
             <li>20↑ ONLY 1T1D</li>
+            <br>
             <li>교류에 연연하지 않으며, 받는 만큼 합니다.</li>
             <li>예민한 성향이며, 이유 불문 겹드림러 블락합니다.</li>
-            <li>민재 님과 연고가 있으신 분들과는 마주하고 싶지 않습니다. <a href = "https://adorable-sight-308.notion.site/alswo0805-788a5f11a64d430a9a1ca7dcc551c611?pvs=4">Click this.</a></li>
+            <li>민재 님과 연고가 있으신 분들과는 마주하고 싶지 않습니다.</li>
+            <br>
+            <li>관련 내용</li>
+            <li><a href = "https://adorable-sight-308.notion.site/alswo0805-788a5f11a64d430a9a1ca7dcc551c611?pvs=4">↘︎Click.</a></li>
         </ul>
         </center>
     </div>
