--- a/1.html
+++ b/1.html
@@ -17,10 +17,7 @@
             <br>
             <li>교류에 연연하지 않으며, 받는 만큼 합니다.</li>
             <li>예민한 성향이며, 이유 불문 겹드림러 블락합니다.</li>
-            <li>민재 님과 연고가 있으신 분들과는 마주하고 싶지 않습니다.</li>
-            <br>
-            <li>관련 내용</li>
-            <li><a href = "https://adorable-sight-308.notion.site/alswo0805-788a5f11a64d430a9a1ca7dcc551c611?pvs=4">↘︎Click.</a></li>
+            <li>민재(@alswo0805) 님과 있었던 일에 대한 링크입니다. <a href = "https://adorable-sight-308.notion.site/alswo0805-788a5f11a64d430a9a1ca7dcc551c611?pvs=4"> &#128196</a></li>
         </ul>
         </center>
     </div>
