--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>profile</title>
     <link rel="stylesheet" href="style.css">
+    <title>inhodawn</title>
 </head>
 <body>
-    <div class="wrap">
-        <center><img src="portrait.png" width="50%" height="auto" onClick="location.href='1.html'"/></center>
-        <center><img src="rope.png" width="30%" height="auto"/></center>
+    <div class="brice">
+        <a href="1.html"><img src="W1siZiIsIjE0Mjc2MiJdLFsicCIsImNvbnZlcnQiLCItcXVhbGl0eSA5MCAtcmVzaXplIDIwMDB4MTUwMFx1MDAzZSJdXQ.jpg" width=50%/></a>
+        <br><br>Brice Marden<br><br>Untitled<br>1969
     </div>
 </body>
 </html>
