--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>inhodawn</title>
 </head>
 <body>
-    <div class="brice">
-        <a href="1.html"><img src="W1siZiIsIjE0Mjc2MiJdLFsicCIsImNvbnZlcnQiLCItcXVhbGl0eSA5MCAtcmVzaXplIDIwMDB4MTUwMFx1MDAzZSJdXQ.jpg" width=100%/></a>
-        <br><br>Brice Marden<br><br>Untitled<br>1969
+    <div class="CouncilSkies">
+        <a href="1.html"><img src="IMG_5947.jpg" width=85%/></a>
     </div>
 </body>
 </html>
